# BW16_TEST_251009_ZZL_3paraSave_I

./: .gitignore  AwsMqtt.cpp  AwsMqtt.h  BUILD_OUTPUT.txt  BW16_TEST_251009_ZZL_3paraSave_I.ino  EnergyEngineer.cpp  EnergyEngineer.h  LightLogicControl.cpp  LightLogicControl.h  NonvolatileDataManager.h  OTHER_BUILD_OUTPUT.txt  OtaProcessor.cpp  OtaProcessor.h  ToolsArray.h  beacon_config.h  connectionUtils.ino  esp32Provision.cpp  esp32Provision.h  ota_prepare.sh  parse_log.sh  payload.cpp  payload.h  upload_image_tool_windows.exe.stackdump  uv_lamp_parameter.h
src/ButtonHandling/: ButtonHandler.cpp  ButtonHandler.h
src/Simple_MLX90640/: Simple_MLX90640.cpp  Simple_MLX90640.h
src/Simple_Rd_03d/: Simple_Rd_03d.cpp  Simple_Rd_03d.h
src/Simple_misc_sensor/: Simple_misc_sensor.cpp  Simple_misc_sensor.h  beacon_pcb.cpp  beacon_pcb.h
src/logic/: ButtonActivityLogic.cpp  ButtonActivityLogic.h  ErrorStatusLogic.cpp  ErrorStatusLogic.h  LightLogicHelpers.cpp  LightLogicHelpers.h  ProvisioningCodec.cpp  ProvisioningCodec.h
src/mlx90640YoloProcessor/: data_types.h  g_model_45.h
src/patchedBle/: BLEAddrPatched.cpp  BLEAddrPatched.h  BLEAdvertDataPatched.cpp  BLEAdvertDataPatched.h  BLEAdvertPatched.cpp  BLEAdvertPatched.h  BLECharacteristicPatched.cpp  BLEScanPatched.h  (+21 more)
test/: CMakeLists.txt  main.cpp  test_harness.h
test/mocks/: Arduino.h
test/tests/: test_button_activity_logic.cpp  test_energy_engineer.cpp  test_error_status_logic.cpp  test_light_logic_helpers.cpp  test_main_ino_logic.cpp  test_payload_manager.cpp  test_provisioning_codec.cpp  test_tools_array.cpp
